# importify

./: .codeclimate.yml  .gitignore  .stylish-haskell.yaml  .travis.yml  BinariesVersionCheck.sh  CHANGES.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  importify  importify.cabal  safe_importify.sh  stack-8.0.1.yaml  stack-8.0.2.yaml  stack-8.2.1.yaml  stack-8.2.2.yaml  stack-nightly.yaml  stack.yaml  stackSeq.sh
app/: Main.hs  Options.hs
src/Extended/Data/: Bool.hs  List.hs  Map.hs  Str.hs
src/Extended/Lens/: TH.hs
src/Extended/System/: Wlog.hs
src/Importify/: Bracket.hs  CPP.hs  Cabal.hs  Cache.hs  Common.hs  Environment.hs  Main.hs  Options.hs  OutputOptions.hs  ParseException.hs  Path.hs  Paths.hs  Preprocessor.hs  Pretty.hs  Resolution.hs  Stack.hs  Syntax.hs  Tree.hs
src/Importify/Cabal/: Extension.hs  Module.hs  Package.hs  Target.hs
src/Importify/Main/: Cache.hs  File.hs  OutputOptions.hs  RemoveUnused.hs  ToExplicit.hs
src/Importify/Resolution/: Explicit.hs  Hiding.hs  Implicit.hs  Qualified.hs
src/Importify/Syntax/: Import.hs  Module.hs  Scoped.hs  Text.hs
test/: BaseSimpleExample.hs  BaseThingAllExample.hs  BaseThingWithExample.hs  GGenerator.hs  SystemSuite.hs  TestSuiteRunner.hs
test/hspec/: Runner.hs
test/hspec/Test/: Cache.hs  File.hs
test/system/: TestDummy.hs  TestHidingUnused.hs  TestHidingUsed.hs  TestImportify.hs  TestInstances.hs  TestLibUnused.hs  TestLibUsed.hs  TestLongSpec.hs  TestNotExportedUnused.hs  TestNotExportedUsed.hs  TestThingAllConstructorUsed.hs  TestThingAllUnused.hs  TestThingAllUsed.hs  TestThingWithPartiallyUsed.hs  TestThingWithUnused.hs  TestThingWithUsed.hs  TestThingWithUsedConstructor.hs  TestThingWithUsedType.hs  TestVarNamedUnused.hs  TestVarNamedUsed.hs  TestVarNamedUsedQualified.hs  TestVarQualifiedNamedOnlyUnused.hs  TestVarQualifiedNamedOnlyUsed.hs  TestVarQualifiedNamedUnused.hs  TestVarQualifiedNamedUsed.hs  TestVarQualifiedOnlyUnused.hs  TestVarQualifiedOnlyUsed.hs  TestVarQualifiedUsed.hs  TestVarUnused.hs  TestVarUsed.hs
test/test-data/base:basic/: 01-Dummy.hs  02-BoolBoolUsed.hs  03-BoolNotUnused.golden  03-BoolNotUnused.hs  04-IOPutStrLnUsed.golden  04-IOPutStrLnUsed.hs  05-IOPutStrLnUnused.hs  06-BoolMultipleMix.hs  07-HidingUsed.golden  07-HidingUsed.hs  08-HidingUnused.golden  08-HidingUnused.hs  08-Z01-HidingMultipleUnused.golden  08-Z01-HidingMultipleUnused.hs  08-Z03-HidingsUnusedButModuleUsed.golden  08-Z04-HidingRemovedWhenExported.golden  08-Z04-HidingRemovedWhenExported.hs  08-Z05-HidingListWhenExportedAs.golden  08-Z05-HidingListWhenExportedAs.hs  08-Z06-HidingSameModuleSameSymbol.golden  08-Z06-HidingSameModuleSameSymbol.hs  09-BoolTypeAndConstructorUsed.hs  10-BoolTypeAndConstructorUnused.golden  10-BoolTypeAndConstructorUnused.hs  11-BoolOneConstructorUnused.hs  12-BoolOnlyTypeUsed.hs  13-BoolOnlyConstructorUsed.hs  14-BoolWithAllUsed.hs  15-BoolWithAllWhenAllUnused.golden  15-BoolWithAllWhenAllUnused.hs  16-BoolWithAllOnlyConstructorUsed.hs  17-BoolWithAllOnlyTypeUsed.hs  18-MonadOnlyInstances.golden  18-MonadOnlyInstances.hs  19-IOQualifiedUsed.hs  20-IOQualifiedUnused.golden  20-IOQualifiedUnused.hs  21-IOImplicitQualifiedUsed.hs  22-IOImplicitQualifiedUnused.golden  22-IOImplicitQualifiedUnused.hs  (+13 more)
test/test-data/base@basic/: 01-Dummy.hs  02-BoolBoolUsed.golden  05-IOPutStrLnUnused.golden  05-IOPutStrLnUnused.hs  06-BoolMultipleMix.hs  08-Z02-HidingPartiallyUnused.golden  08-Z02-HidingPartiallyUnused.hs  08-Z03-HidingsUnusedButModuleUsed.hs  09-BoolTypeAndConstructorUsed.golden  11-BoolOneConstructorUnused.hs  12-BoolOnlyTypeUsed.hs  16-BoolWithAllOnlyConstructorUsed.hs  17-BoolWithAllOnlyTypeUsed.hs  22-IOImplicitQualifiedUnused.hs  23-IOImplicitQualifiedUsedQualified.hs  24-IOFullyQualifiedUsed.golden  25-IOFullyQualifiedUnused.golden  27-IOAsQualifiedUsed.hs  30-ListImplicitUsed.hs  31-UnknownImplicit.golden  32-UnknownExplicit.golden  33-ExportFunctionExplicit.hs  35-ExportBoolPartially.hs  40-PreserveComments.golden  40-PreserveComments.hs
test/test-data/haskell-names:both/: 02-ImportBothUsedUnqualified.golden
test/test-data/haskell-names@both/: 02-ImportBothUsedUnqualified.hs
test/test-data/haskell-names@records/: 04-RecordExplicitUnused.hs  05-RecordWildCardUsed.golden
test/test-data/haskell-src-exts:constructors/: 01-SameNameTypeUsed.hs  02-SameNameWithConstructorUsed.hs  03-SameNameOnlyTypeUsed.golden  03-SameNameOnlyTypeUsed.hs  04-SameNameOnlyConstructorUsed.hs  05-MultipleOuterEntriesRemoved.hs  06-MultipleInnerEntriesRemoved.hs  07-BigMix.hs
test/test-data/haskell-src-exts@constructors/: 01-SameNameTypeUsed.hs  02-SameNameWithConstructorUsed.golden  03-SameNameOnlyTypeUsed.hs  04-SameNameOnlyConstructorUsed.golden  06-MultipleInnerEntriesRemoved.hs  07-BigMix.golden
test/test-data/importify:project/: 02-ImportifyUnused.golden  02-ImportifyUnused.hs  02-ImportifyUsed.hs  04-ImportifyOtherUnused.hs
test/test-data/importify@project/: 01-ImportifyUsed.hs
test/test-data/turtle:library/: 01-LibraryUsed.hs  02-LibraryUnused.hs
test/test-data/turtle@library/: 01-LibraryUsed.hs  02-LibraryUnused.hs
test/test-data/universum@prelude/: 01-UniversumShowMethod.hs  02-UniversumBoolType.golden  03-UniversumTrueBothUnused.golden  03-UniversumTrueBothUnused.hs  04-UniversumTrueHidingUnused.golden  05-UniversumHidingUnused.golden
test/test-data/unused/base@basic/: 06-BoolMultipleMix.golden  08-HidingUnused.hs  08-Z01-HidingMultipleUnused.golden  10-BoolTypeAndConstructorUnused.hs  11-BoolOneConstructorUnused.golden  12-BoolOnlyTypeUsed.golden  13-BoolOnlyConstructorUsed.hs  14-BoolWithAllUsed.hs  15-BoolWithAllWhenAllUnused.hs  19-IOQualifiedUsed.hs  20-IOQualifiedUnused.hs  21-IOImplicitQualifiedUsed.hs  25-IOFullyQualifiedUnused.hs  26-IOFullyQualfiedAllUsed.golden  26-Z01-IOFullyQualifiedAllUnused.hs  28-ListAsQualifiedWholeUnused.hs  37-ExportModuleImplicitAs.golden  38-ListImplicitQualifiedAllUsed.hs  39-ListImplicitQualifiedAllUsedExport.hs  40-PreserveComments.hs
test/test-data/unused/haskell-names@records/: 01-ImportBothUsedQualified.hs  (+3 more)
(+9 files in other folders)
