name:                importify
version:             0.0.1
synopsis:            Tool for haskell imports refactoring
description:         Please see README.md
homepage:            https://github.com/serokell/importify
license:             MIT
license-file:        LICENSE
author:              @serokell
maintainer:          Serokell <hi@serokell.io>
copyright:           2017 Serokell
category:            Development, Refactoring
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Importify.Cabal
                       Importify.CPP
                       Importify.Main
                       Importify.Paths
                       Importify.Pretty
                       Importify.Resolution
                       Importify.Syntax
                       Importify.Tree

  other-modules:
                       -- Different utilities extending functionality
                       -- of other libs
                       Extended.Data.List

                       -- Functions to work with .cabal files
                       Importify.Cabal.Module
                       Importify.Cabal.Package
                       Importify.Cabal.Target

                       -- Main functions used by commands
                       Importify.Main.Cache
                       Importify.Main.File

  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , Cabal
                     , containers
                     , directory
                     , filepath
                     , fmt
                     , haskell-names
                     , haskell-src-exts
                     , hse-cpp
                     , path
                     , pretty-show
                     , syb
                     , text
                     , text-format
                     , turtle
                     , universum
                     , unordered-containers
  default-language:    Haskell2010
  ghc-options:         -Wall

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:  GeneralizedNewtypeDeriving
                       NoImplicitPrelude
                       OverloadedStrings
                       RecordWildCards

executable importify
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Options
  build-depends:       base, importify
                     , optparse-applicative
                     , universum
  default-language:    Haskell2010

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:  GeneralizedNewtypeDeriving
                       NoImplicitPrelude
                       OverloadedStrings
                       RecordWildCards

test-suite importify-test
  type:                exitcode-stdio-1.0
  main-is:             TestSuiteRunner.hs
  hs-source-dirs:      test
  build-depends:       base, importify
                     , Cabal
                     , Diff
                     , directory
                     , filepath
                     , haskell-src-exts
                     , hspec
                     , path
                     , text
                     , universum
  default-language:    Haskell2010

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:  GeneralizedNewtypeDeriving
                       NoImplicitPrelude
                       OverloadedStrings
                       RecordWildCards

source-repository head
  type:     git
  location: https://github.com/serokell/importify
