name:                importify
version:             0.0.1
synopsis:            Tool for haskell imports refactoring
description:         Please see README.md
homepage:            https://github.com/serokell/importify
bug-reports:         https://github.com/serokell/importify/issues
license:             MIT
license-file:        LICENSE
author:              @serokell
maintainer:          Serokell <hi@serokell.io>
copyright:           2017 Serokell
category:            Development, Refactoring
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 8.0.2

source-repository head
  type:     git
  location: https://github.com/serokell/importify

library
  hs-source-dirs:      src
  exposed-modules:
                       Importify.Cabal
                           Importify.Cabal.Extension
                           Importify.Cabal.Module
                           Importify.Cabal.Package
                           Importify.Cabal.Target
                       Importify.Main
                           Importify.Main.Cache
                           Importify.Main.File
                       Importify.ParseException
                       Importify.Paths
                       Importify.Preprocessor
                       Importify.Pretty
                       Importify.Resolution
                           Importify.Resolution.Explicit
                           Importify.Resolution.Hiding
                           Importify.Resolution.Implicit
                           Importify.Resolution.Qualified
                       Importify.Stack
                       Importify.Syntax
                           Importify.Syntax.Import
                           Importify.Syntax.Module
                           Importify.Syntax.Scoped
                           Importify.Syntax.Text
                       Importify.Tree

                       Extended.System.Wlog

  other-modules:       Extended.Data.Bool
                       Extended.Data.List
                       Extended.Data.Str

  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , aeson-pretty
                     , autoexporter
                     , bytestring
                     , Cabal
                     , containers
                     , directory
                     , filepath
                     , fmt
                     , foldl
                     , hashable
                     , haskell-names
                     , haskell-src-exts
                     , hse-cpp
                     , log-warper
                     , microlens-mtl
                     , path
                     , pretty-simple
                     , syb
                     , text
                     , text-format
                     , turtle
                     , universum
                     , unordered-containers
                     , yaml

  ghc-options:         -Wall
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-language:    Haskell2010
  default-extensions:  GeneralizedNewtypeDeriving
                       LambdaCase
                       NoImplicitPrelude
                       OverloadedStrings
                       PartialTypeSignatures
                       RecordWildCards

executable importify
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Options

  build-depends:       base, importify
                     , log-warper
                     , optparse-applicative
                     , universum

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-language:    Haskell2010
  default-extensions:  GeneralizedNewtypeDeriving
                       NoImplicitPrelude
                       OverloadedStrings
                       RecordWildCards

executable golden-generator
  hs-source-dirs:      test
  main-is:             GGenerator.hs

  build-depends:       base, importify
                     , directory
                     , path
                     , tasty-golden
                     , universum

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-language:    Haskell2010

test-suite importify-test
  type:                exitcode-stdio-1.0
  main-is:             TestSuiteRunner.hs
  hs-source-dirs:      test

  build-depends:       base, importify
                     , Diff
                     , directory
                     , hspec
                     , log-warper
                     , path
                     , universum

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-language:    Haskell2010
  default-extensions:  GeneralizedNewtypeDeriving
                       NoImplicitPrelude
                       OverloadedStrings
                       RecordWildCards
