name:                importify
version:             1.0
synopsis:            Tool for haskell imports refactoring
description:         Please see README.md
homepage:            https://github.com/serokell/importify
bug-reports:         https://github.com/serokell/importify/issues
license:             MIT
license-file:        LICENSE
author:              @serokell
maintainer:          Serokell <hi@serokell.io>
copyright:           2017 Serokell
category:            Development, Refactoring
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1
                   , GHC == 8.0.2
                   , GHC == 8.2.1

source-repository head
  type:     git
  location: https://github.com/serokell/importify

library
  hs-source-dirs:      src
  exposed-modules:
                       Importify.Cabal
                           Importify.Cabal.Extension
                           Importify.Cabal.Module
                           Importify.Cabal.Package
                           Importify.Cabal.Target
                       Importify.Environment
                       Importify.Main
                           Importify.Main.Cache
                           Importify.Main.File
                       Importify.ParseException
                       Importify.Path
                       Importify.Preprocessor
                       Importify.Pretty
                       Importify.Resolution
                           Importify.Resolution.Explicit
                           Importify.Resolution.Hiding
                           Importify.Resolution.Implicit
                           Importify.Resolution.Qualified
                       Importify.Stack
                       Importify.Syntax
                           Importify.Syntax.Import
                           Importify.Syntax.Module
                           Importify.Syntax.Scoped
                           Importify.Syntax.Text
                       Importify.Tree

                       Extended.System.Wlog

  other-modules:       Extended.Data.Bool
                       Extended.Data.List
                       Extended.Data.Str
                       Extended.Lens.TH

  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , aeson-pretty
                     , autoexporter
                     , bytestring
                     , Cabal
                     , containers
                     , filepath
                     , fmt
                     , foldl
                     , hashable
                     , haskell-names
                     , haskell-src-exts
                     , hse-cpp
                     , log-warper >= 1.8.2
                     , microlens-platform
                     , path
                     , path-io
                     , pretty-simple
                     , syb
                     , template-haskell
                     , text
                     , text-format
                     , turtle
                     , universum >= 1.0.0
                     , unordered-containers
                     , yaml

  ghc-options:         -Wall
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-language:    Haskell2010
  default-extensions:  GeneralizedNewtypeDeriving
                       LambdaCase
                       NoImplicitPrelude
                       OverloadedStrings
                       PartialTypeSignatures
                       RecordWildCards

executable importify
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Options

  build-depends:       base, importify
                     , log-warper >= 1.8.2
                     , optparse-applicative
                     , universum >= 1.0.0

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-language:    Haskell2010
  default-extensions:  GeneralizedNewtypeDeriving
                       NoImplicitPrelude
                       OverloadedStrings
                       RecordWildCards

executable golden-generator
  hs-source-dirs:      test
  main-is:             GGenerator.hs

  build-depends:       base, importify
                     , text
                     , path
                     , path-io
                     , universum >= 1.0.0

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-language:    Haskell2010

test-suite importify-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/hspec
  main-is:             Runner.hs
  other-modules:       Test.Cache
                       Test.File

  build-depends:       base, importify
                     , filepath
                     , hspec
                     , log-warper >= 1.8.2
                     , microlens-platform
                     , path
                     , path-io
                     , universum >= 1.0.0
                     , unordered-containers

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-language:    Haskell2010
  default-extensions:  GeneralizedNewtypeDeriving
                       NoImplicitPrelude
                       OverloadedStrings
                       RecordWildCards
